# lets-track-it

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
app/config/: config.yaml
app/include/: Application.h  Config.h
app/src/: Application.cpp  Config.cpp
tracker/: CMakeLists.txt
tracker/include/: BBoxDrawingEvent.h  Event.h  FixedQueue.hpp  common.h
tracker/include/detector/: Box.h  Detector.h  DetectorCreator.hpp  FakeDetector.h  YoloDetector.h
tracker/include/tracker/: KeyPoint.h  OptFlowTracker.h  Trajectory.h
tracker/include/video/: Frame.h  OpenCVVideo.h  Video.h
tracker/src/detector/: FakeDetector.cpp  YoloDetector.cpp
tracker/src/tracker/: OptFlowTracker.cpp  Trajectory.cpp
tracker/src/video/: Frame.cpp  OpenCVVideo.cpp
